cluster/core/index/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: index
  namespace: index
  labels:
    app.kubernetes.io/name: index
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: index
